force-app/main/default/objects/CountriesRegions__c/CountriesRegions__c.object-meta.xml
<CustomObject>
    <label>CountriesRegions</label>
    <nameField>
        <label>CountriesRegions</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CountriesRegions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>