force-app/main/default/objects/CountriesRegions__c/fields/Available_StatesProvinces__c.field-meta.xml
<CustomField>
    <fullName>Available_StatesProvinces__c</fullName>
    <label>Available States/Provinces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>