force-app/main/default/objects/CountriesRegions__c/fields/Default_Reseller_Rep__c.field-meta.xml
<CustomField>
    <fullName>Default_Reseller_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Reseller Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CountriesRegions</relationshipName>
    <type>Lookup</type>
</CustomField>