force-app/main/default/objects/CountriesRegions__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <description>verifies user is active before using any automation to update records on inactive user</description>
    <formula>Default_Reseller_Rep__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>