force-app/main/default/objects/CountriesRegions__c/fields/MapOwnerId__c.field-meta.xml
<CustomField>
    <fullName>MapOwnerId__c</fullName>
    <label>MapOwnerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>