force-app/main/default/objects/CountriesRegions__c/fields/repFormulaTest__c.field-meta.xml
<CustomField>
    <fullName>repFormulaTest__c</fullName>
    <formula>Default_Reseller_Rep__r.FirstName +&apos; &apos;+ Default_Reseller_Rep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>repFormulaTest</label>
    <type>Text</type>
</CustomField>