force-app/main/default/objects/CountriesRegions__c/fields/ResellerDefaultSalessRep__c.field-meta.xml
<CustomField>
    <fullName>ResellerDefaultSalessRep__c</fullName>
    <label>ResellerDefaultSalessRep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>