force-app/main/default/objects/CountriesRegions__c/fields/SubRegion__c.field-meta.xml
<CustomField>
    <fullName>SubRegion__c</fullName>
    <label>SubRegion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>VSTR</fullName>
            </value>
            <value>
                <fullName>VSUK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>