force-app/main/default/objects/CountriesRegions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>CountryCode__c</columns>
    <columns>VSRegion__c</columns>
    <columns>VSSubRegion__c</columns>
    <columns>Available_StatesProvinces__c</columns>
    <columns>State__c</columns>
    <columns>StateCode__c</columns>
    <columns>MapOwnerId__c</columns>
    <columns>ResellerDefaultSalessRep__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CountriesRegions__c.Standard</value>
    </filters>
    <label>All Records</label>
    <language>en_US</language>
</ListView>