force-app/main/default/objects/CountriesRegions__c/listViews/SubRegions.listView-meta.xml
<ListView>
    <fullName>SubRegions</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>CountryCode__c</columns>
    <columns>VSRegion__c</columns>
    <columns>VSSubRegion__c</columns>
    <columns>Available_StatesProvinces__c</columns>
    <columns>State__c</columns>
    <columns>StateCode__c</columns>
    <columns>MapOwnerId__c</columns>
    <columns>ResellerDefaultSalessRep__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VSRegion__c</field>
        <operation>equals</operation>
        <value>VSI,VSE,VSA</value>
    </filters>
    <filters>
        <field>VSSubRegion__c</field>
        <operation>equals</operation>
    </filters>
    <label>SubRegions</label>
    <language>en_US</language>
</ListView>